tests/ui/fail/impl_generics.stderr
error: #[extern_trait] impls may not have generics
  --> tests/ui/fail/impl_generics.rs:11:5
   |
11 | impl<T> Api for Impl<T> {
   |     ^^^
